--- a/app/src/main/res/layout/sticky_header_download.xml
+++ b/app/src/main/res/layout/sticky_header_download.xml
@@ -3,11 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorStickyHeader"
-    android:elevation="2dp"
-    android:paddingStart="16dp"
-    android:paddingTop="8dp"
-    android:paddingEnd="16dp"
-    android:paddingBottom="8dp">
+    android:padding="8dp">
 
     <TextView
         android:id="@android:id/title"
