--- a/app/src/main/res/layout/item_version.xml
+++ b/app/src/main/res/layout/item_version.xml
@@ -5,10 +5,8 @@
     android:clipToPadding="false"
     android:minHeight="?attr/listPreferredItemHeight"
     android:orientation="vertical"
-    android:paddingStart="16dp"
-    android:paddingTop="11dp"
-    android:paddingEnd="16dp"
-    android:paddingBottom="11dp">
+    android:paddingHorizontal="8dp"
+    android:paddingVertical="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
