--- a/app/src/main/res/layout/status_installer.xml
+++ b/app/src/main/res/layout/status_installer.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginBottom="8dp">
-
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -203,7 +201,7 @@
                         android:paddingBottom="8dp">
 
                         <TextView
-                            android:id="@+id/ic_manufacturer"
+                            android:id="@+id/manufacturer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
