--- a/app/src/main/res/layout/activity_modules.xml
+++ b/app/src/main/res/layout/activity_modules.xml
@@ -7,7 +7,9 @@
     android:clipChildren="false"
     android:clipToPadding="false">
 
-    <include layout="@layout/appbar_layout" />
+    <include
+        android:id="@+id/appbar"
+        layout="@layout/appbar_layout" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
