--- a/app/src/main/res/layout/activity_ed_download.xml
+++ b/app/src/main/res/layout/activity_ed_download.xml
@@ -7,18 +7,18 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="?actionBarTheme">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?colorActionBar"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="?actionBarPopupTheme" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
-            style="@style/Widget.MaterialComponents.TabLayout"
+            style="?tabLayoutTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?colorActionBar"
