--- a/app/src/main/res/layout/appbar_layout.xml
+++ b/app/src/main/res/layout/appbar_layout.xml
@@ -2,13 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:theme="@style/AppTheme.AppBarOverlay">
+    android:theme="?actionBarTheme">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?colorActionBar"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
+        app:popupTheme="?actionBarPopupTheme" />
 
 </com.google.android.material.appbar.AppBarLayout>
