--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196f3</color>
-    <color name="colorBackground">#424242</color>
-    <color name="colorAccent">#448aff</color>
+    <color name="colorPrimary">@color/material_blue_700</color>
+    <color name="colorBackground">#303030</color>
     <color name="colorPrimaryDark">#2E2E2E</color>
     <color name="colorActionBar">#383838</color>
-    <color name="red_500">#F44336</color>
-    <color name="warning">@color/red_500</color>
-    <color name="download_status_update_available">#4CAF50</color>
-    <color name="amber_500">#FFC107</color>
     <color name="navigationBarColor">#B3000000</color>
     <color name="colorStickyHeader">#EA424242</color>
 </resources>
