--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,14 +7,17 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorActionBar">@color/colorActionBar</item>
+        <item name="actionBarTheme">@style/ThemeOverlay.MaterialComponents.ActionBar</item>
         <item name="android:colorBackground">@color/colorBackground</item>
         <item name="android:windowBackground">@color/colorBackground</item>
+        <item name="actionBarPopupTheme">@style/AppTheme.PopupOverlay</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">@bool/lightSystemUI</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">@bool/lightSystemUI
         </item>
         <item name="android:navigationBarColor">@color/navigationBarColor</item>
         <item name="alertDialogTheme">@style/ThemeOverlay.MaterialComponents.MaterialAlertDialog
         </item>
+        <item name="tabLayoutTheme">@style/Widget.MaterialComponents.TabLayout</item>
     </style>
 
     <style name="AppearanceFoundation.Caption" parent="TextAppearance.AppCompat.Caption">
@@ -26,11 +29,17 @@
         <item name="colorPrimaryDark">@color/colorBackground</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.ActionBar" />
-
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
 
     <style name="ThemeOverlay" />
+
+    <style name="ThemeOverlay.ActionBarPrimaryColor">
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorActionBar">@color/colorPrimary</item>
+        <item name="actionBarTheme">@style/ThemeOverlay.MaterialComponents.Dark.ActionBar</item>
+        <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
+        <item name="tabLayoutTheme">@style/Widget.MaterialComponents.TabLayout.Colored</item>
+    </style>
 
     <style name="ThemeOverlay.Black">
         <item name="colorPrimaryDark">@android:color/black</item>
@@ -38,5 +47,6 @@
         <item name="android:navigationBarColor">@android:color/black</item>
         <item name="android:colorBackground">@android:color/black</item>
         <item name="android:windowBackground">@android:color/black</item>
+        <item name="tabLayoutTheme">@style/Widget.MaterialComponents.TabLayout</item>
     </style>
 </resources>
